--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -71,7 +71,7 @@
 
 \vspace{24 pt}
 
-\noindent V Pardubicích dne x. xxxxx 2022 \dotfill{}\hspace{\stretch{0.5}} 
+\noindent V Pardubicích dne x. xxxx 2022 \dotfill{}\hspace{\stretch{0.5}} 
 
 \hspace{6cm} Michal Maděra, Josef Kahoun
 
