--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -54,7 +54,7 @@
     \noindent\textbf{Autoři:} Michal Maděra a Josef Kahoun\\
     \textbf{Škola:} DELTA - Střední škola informatiky a ekonomie, s.r.o.\\
     \textbf{Kraj:} Pardubický kraj\\
-    \textbf{Konzultant:} RNDr. Jan Koupil, Ph.D.\\
+    \textbf{Konzultanti:} RNDr. Jan Koupil, Ph.D. a akademický malíř Daniel Václavík\\
 }
 
 \noindent Pardubice, 2022
