Pojmy a další technologie

--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -1,9 +1,15 @@
 %% literatura
 \begin{thebibliography}{99}
-    \bibitem{Kontejner} \textit{Kontejner} [online]. [cit. 2021-01-10]. Dostupné z \url{https://www.docker.com/resources/what-container/}
+    \bibitem{Kontejner} \textit{Kontejner} [online]. [cit. 2022-01-10]. Dostupné z \url{https://www.docker.com/resources/what-container/}
+    \bibitem{Framework} \textit{Framework} [online]. [cit. 2022-01-22]. Dostupné z \url{https://codeinstitute.net/global/blog/what-is-a-framework/}
+    \bibitem{Skalovani} \textit{Škálování} [online]. [cit. 2022-01-22]. Dostupné z \url{https://www.cyberlinkasp.com/insights/what-is-software-scalability-and-why-is-it-important/}
+    \bibitem{JSON} \textit{JSON} [online]. [cit. 2022-01-22]. Dostupné z \url{https://www.json.org/json-en.html}
+    \bibitem{Transpilace} \textit{Transpilace} [online]. [cit. 2022-01-22]. Dostupné z \url{https://www.digitalocean.com/community/tutorials/javascript-transpilers-what-they-are-why-we-need-them}
+    \bibitem{Cache} \textit{Cache} [online]. [cit. 2022-01-22]. Dostupné z \url{https://www.businessinsider.com/what-is-cache}
+    \bibitem{Flutter} \textit{Flutter} [online]. [cit. 2022-01-22]. Dostupné z \url{https://flutter.dev/}
+    \bibitem{OpenSource} \textit{Open Source} [online]. [cit. 2022-01-22]. Dostupné z \url{https://opensource.com/resources/what-open-source}
     \bibitem{Csharp} \textit{Nejjednoduší programovací jazyky na naučení} [online]. [cit. 2021-01-10]. Dostupné z \url{https://careerkarma.com/blog/easiest-programming-languages-to-learn/#Csharp}
-    \bibitem{TypeScript} \textit{TypeScript} [online]. [cit. 2021-01-10]. Dostupné z \url{https://www.typescriptlang.org/}
-    \bibitem{Kubernetes} \textit{Kubernetes} [online]. [cit. 2021-01-10]. Dostupné z \url{https://kubernetes.io/}
+    \bibitem{TypeScript} \textit{TypeScript} [online]. [cit. 2022-01-10]. Dostupné z \url{https://www.typescriptlang.org/}
 \end{thebibliography}
 
 
