--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -10,6 +10,7 @@
     \bibitem{OpenSource} \textit{Open Source} [online]. [cit. 2022-01-22]. Dostupné z \url{https://opensource.com/resources/what-open-source}
     \bibitem{Csharp} \textit{Nejjednoduší programovací jazyky na naučení} [online]. [cit. 2021-01-10]. Dostupné z \url{https://careerkarma.com/blog/easiest-programming-languages-to-learn/#Csharp}
     \bibitem{TypeScript} \textit{TypeScript} [online]. [cit. 2022-01-10]. Dostupné z \url{https://www.typescriptlang.org/}
+    \bibitem{Prisma} \textit{Prisma} [online]. [cit. 2022-01-28]. Dostupné z \url{https://www.prisma.io/docs/concepts/overview/what-is-prisma}
 \end{thebibliography}
 
 
