--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -11,6 +11,8 @@
     \bibitem{Csharp} \textit{Nejjednoduší programovací jazyky na naučení} [online]. [cit. 2021-01-10]. Dostupné z \url{https://careerkarma.com/blog/easiest-programming-languages-to-learn/#Csharp}
     \bibitem{TypeScript} \textit{TypeScript} [online]. [cit. 2022-01-10]. Dostupné z \url{https://www.typescriptlang.org/}
     \bibitem{Prisma} \textit{Prisma} [online]. [cit. 2022-01-28]. Dostupné z \url{https://www.prisma.io/docs/concepts/overview/what-is-prisma}
+    \bibitem{PubSub} \textit{PubSub} [online]. [cit. 2022-01-28]. Dostupné z \url{https://redis.io/topics/pubsub}
+    \bibitem{bcrypt} \textit{bcrypt} [online]. [cit. 2022-01-28]. Dostupné z \url{https://auth0.com/blog/hashing-in-action-understanding-bcrypt/}
 \end{thebibliography}
 
 
