--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -88,6 +88,7 @@ Chtěli bychom poděkovat našim učitelům, RNDr. Janu Koupilovi, Ph.D. za vede
 \noindent{\Large{\bfseries{Abstrakt}}}
 
 \noindent Cílem projektu je vytvořit vzdělávací hru pro děti na základní škole, ve které se naučí logicky přemýšlet nad kódem.
+%TODO Domyslet abstrakt
 
 \vspace{18pt}
 
