--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,9 @@
 \titleformat{\section}[block]{\scshape\bfseries\Large}{\thesection}{10pt}{\vspace{0pt}}
 \titleformat{\subsection}[block]{\bfseries\large}{\thesubsection}{10pt}{\vspace{0pt}}
 
+\setlength{\parindent}{0em}
+\setlength{\parskip}{1em}
+
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{1}
 \usepackage{fancyhdr}
