--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -13,6 +13,10 @@
     \bibitem{Prisma} \textit{Prisma} [online]. [cit. 2022-01-28]. Dostupné z \url{https://www.prisma.io/docs/concepts/overview/what-is-prisma}
     \bibitem{PubSub} \textit{PubSub} [online]. [cit. 2022-01-28]. Dostupné z \url{https://redis.io/topics/pubsub}
     \bibitem{bcrypt} \textit{bcrypt} [online]. [cit. 2022-01-28]. Dostupné z \url{https://auth0.com/blog/hashing-in-action-understanding-bcrypt/}
+    \bibitem{CDN} \textit{CDN} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.cloudflare.com/learning/cdn/what-is-a-cdn/}
+    \bibitem{Cloudflare-pages} \textit{Cloudflare Pages} [online]. [cit. 2022-02-12]. Dostupné z \url{https://pages.cloudflare.com/}
+    \bibitem{Cloudflare-cdn} \textit{Cloudflare CDN} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.cloudflare.com/cdn/}
+    \bibitem{react-unity-webgl} \textit{react-unity-webgl} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.npmjs.com/package/react-unity-webgl}    
 \end{thebibliography}
 
 
