--- a/main.tex
+++ b/main.tex
@@ -28,8 +28,8 @@
 
 \usepackage[pagestyles]{titlesec} %% balíček pro úpravu stylu kapitol a sekcí
 \titleformat{\chapter}[block]{\scshape\bfseries\LARGE}{\thechapter}{10pt}{\vspace{0pt}}[\vspace{-22pt}]
-\titleformat{\section}[block]{\scshape\bfseries\Large}{\thesection}{10pt}{}
-\titleformat{\subsection}[block]{\bfseries\large}{\thesubsection}{10pt}{}
+\titleformat{\section}[block]{\scshape\bfseries\Large}{\thesection}{10pt}{\vspace{0pt}}
+\titleformat{\subsection}[block]{\bfseries\large}{\thesubsection}{10pt}{\vspace{0pt}}
 
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
