--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -16,7 +16,8 @@
     \bibitem{CDN} \textit{CDN} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.cloudflare.com/learning/cdn/what-is-a-cdn/}
     \bibitem{Cloudflare-pages} \textit{Cloudflare Pages} [online]. [cit. 2022-02-12]. Dostupné z \url{https://pages.cloudflare.com/}
     \bibitem{Cloudflare-cdn} \textit{Cloudflare CDN} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.cloudflare.com/cdn/}
-    \bibitem{react-unity-webgl} \textit{react-unity-webgl} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.npmjs.com/package/react-unity-webgl}    
+    \bibitem{react-unity-webgl} \textit{react-unity-webgl} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.npmjs.com/package/react-unity-webgl}  
+    \bibitem{AssetBundle} \textit{AssetBundle} [online]. [cit. 2022-02-12]. Dostupné z \url{https://docs.unity3d.com/Manual/AssetBundlesIntro.html}    
 \end{thebibliography}
 
 
