--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -19,6 +19,9 @@
     \bibitem{react-unity-webgl} \textit{react-unity-webgl} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.npmjs.com/package/react-unity-webgl}
     \bibitem{AssetBundle} \textit{AssetBundle} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://docs.unity3d.com/Manual/AssetBundlesIntro.html}
     \bibitem{Coroutine} \textit{Coroutine} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://docs.unity3d.com/Manual/Coroutines.html}
+    \bibitem{SharedPreferences} \textit{SharedPreferences} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://developer.android.com/training/data-storage/shared-preferences}
+    \bibitem{NSUserDefaults} \textit{NSUserDefaults} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://developer.apple.com/documentation/foundation/nsuserdefaults}
+    \bibitem{ImagePicker} \textit{ImagePicker} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://pub.dev/packages/image_picker}
 \end{thebibliography}
 
 
