--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
 
-\setcounter{secnumdepth}{3}
+\setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{1}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -48,6 +48,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{pdfpages} %% Balíček umožňující vkládat stránky z PDF souborů, 
+
+\newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\}
 
 
 %% Začátek dokumentu
