--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -17,11 +17,17 @@
     \bibitem{Cloudflare-pages} \textit{Cloudflare Pages} [online]. [cit. 2022-02-12]. Dostupné z \url{https://pages.cloudflare.com/}
     \bibitem{Cloudflare-cdn} \textit{Cloudflare CDN} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.cloudflare.com/cdn/}
     \bibitem{react-unity-webgl} \textit{react-unity-webgl} [online]. [cit. 2022-02-12]. Dostupné z \url{https://www.npmjs.com/package/react-unity-webgl}
-    \bibitem{AssetBundle} \textit{AssetBundle} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://docs.unity3d.com/Manual/AssetBundlesIntro.html}
-    \bibitem{Coroutine} \textit{Coroutine} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://docs.unity3d.com/Manual/Coroutines.html}
-    \bibitem{SharedPreferences} \textit{SharedPreferences} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://developer.android.com/training/data-storage/shared-preferences}
-    \bibitem{NSUserDefaults} \textit{NSUserDefaults} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://developer.apple.com/documentation/foundation/nsuserdefaults}
-    \bibitem{ImagePicker} \textit{ImagePicker} [online]. [cit. 2022-02-1š]. Dostupné z \url{https://pub.dev/packages/image_picker}
+    \bibitem{AssetBundle} \textit{AssetBundle} [online]. [cit. 2022-02-13]. Dostupné z \url{https://docs.unity3d.com/Manual/AssetBundlesIntro.html}
+    \bibitem{Coroutine} \textit{Coroutine} [online]. [cit. 2022-02-13]. Dostupné z \url{https://docs.unity3d.com/Manual/Coroutines.html}
+    \bibitem{SharedPreferences} \textit{SharedPreferences} [online]. [cit. 2022-02-13]. Dostupné z \url{https://developer.android.com/training/data-storage/shared-preferences}
+    \bibitem{NSUserDefaults} \textit{NSUserDefaults} [online]. [cit. 2022-02-13]. Dostupné z \url{https://developer.apple.com/documentation/foundation/nsuserdefaults}
+    \bibitem{ImagePicker} \textit{ImagePicker} [online]. [cit. 2022-02-13]. Dostupné z \url{https://pub.dev/packages/image_picker}
+    \bibitem{OWASP} \textit{OWASP} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/}
+    \bibitem{OWASP-top-ten} \textit{OWASP Top 10} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/www-project-top-ten/}
+    \bibitem{CryptographicFailures} \textit{Kryptografické selhání} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/Top10/A02_2021-Cryptographic_Failures/}
+    \bibitem{Injection} \textit{Injection} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/Top10/A03_2021-Injection/}
+    \bibitem{Validator} \textit{Validator} [online]. [cit. 2022-03-03]. Dostupné z \url{https://www.npmjs.com/package/validator}
+    \bibitem{VulnerableAndOutdatedComponents} \textit{Vulnerable and Outdated Components} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/Top10/A06_2021-Vulnerable_and_Outdated_Components/}
 \end{thebibliography}
 
 
