--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -28,13 +28,7 @@
     \bibitem{Injection} \textit{Injection} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/Top10/A03_2021-Injection/}
     \bibitem{Validator} \textit{Validator} [online]. [cit. 2022-03-03]. Dostupné z \url{https://www.npmjs.com/package/validator}
     \bibitem{VulnerableAndOutdatedComponents} \textit{Vulnerable and Outdated Components} [online]. [cit. 2022-03-03]. Dostupné z \url{https://owasp.org/Top10/A06_2021-Vulnerable_and_Outdated_Components/}
+    \bibitem{What-is-AI} \textit{What is AI} [online]. [cit. 2022-03-04]. Dostupné z \url{https://borghese.di.unimi.it/Teaching/AdvancedIntelligentSystems/Old/IntelligentSystems_2008_2009/Old/IntelligentSystems_2005_2006/Documents/Symbolic/04_McCarthy_whatisai.pdf}
+    \bibitem{IBM-AI} \textit{IBM - What is AI} [online]. [cit. 2022-03-04]. Dostupné z \url{https://www.ibm.com/cloud/learn/what-is-artificial-intelligence}
+    \bibitem{IBM-CV} \textit{IBM - What is computer vision} [online]. [cit. 2022-03-04]. Dostupné z \url{https://www.ibm.com/topics/computer-vision}
 \end{thebibliography}
-
-
-% \bibitem{sablonaSOC} DOKULIL Jakub. \textit{Šablona pro psaní SOČ v programu \LaTeX} [Online]. Brno, 2020 [cit. 2020-08-24]. Dostupné z: \url{https://github.com/Kubiczek36/SOC_sablona}
-% \bibitem{LaTeXprirucka}OETIKER, Tobias, Hubert PARTL, Irene HYNA, Elisabeth SCHEGL, Michal KOČER a Pavel SÝKORA. \textit{Ne příliš stručný úvod do systému LaTeX2e} [online]. 1998 [cit. 2020-08-24]. Dostupné z: \url{https://www.jaroska.cz/elearning/informatika/typografie/lshort2e-cz.pdf}
-% \bibitem{wikibooksLaTeX}\textit{Wikibooks: LaTeX} [online]. San Francisco (CA): Wikimedia Foundation, 2001- [cit. 2020-08-24]. Dostupné z: \url{https://en.wikibooks.org/wiki/LaTeX}
-% \bibitem{stackExchange} \textit{TeX - LaTeX Stack Exchange} [online]. Stack Exchange, 2020 [cit. 2020-09-01]. Dostupné z: \url{https://tex.stackexchange.com}
-% \bibitem{socLogo} \textit{Středoškolská odborná činnost} [online]. [cit. 2020-08-26]. Dostupné z: \url{https://www.soc.cz}
-% \bibitem{citacePRO}\textit{Citace PRO} [online]. Citace.com, 2020 [cit. 2020-08-31]. Dostupné z: \url{https://www.citacepro.com}
-% \bibitem{Born2019} BORN, Max a Emil WOLF. \textit{Principles of optics: electromagnetic theory of propagation, interference and diffraction of light}. 7th (expanded) edition. Reprinted wirth corrections 2002. 15th printing 2019. Cambridge: Cambridge University Press, 2019. ISBN 978-0-521-64222-4.
