Fixed text issues

--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -31,4 +31,6 @@
     \bibitem{What-is-AI} \textit{What is AI} [online]. [cit. 2022-03-04]. Dostupné z \url{https://borghese.di.unimi.it/Teaching/AdvancedIntelligentSystems/Old/IntelligentSystems_2008_2009/Old/IntelligentSystems_2005_2006/Documents/Symbolic/04_McCarthy_whatisai.pdf}
     \bibitem{IBM-AI} \textit{IBM - What is AI} [online]. [cit. 2022-03-04]. Dostupné z \url{https://www.ibm.com/cloud/learn/what-is-artificial-intelligence}
     \bibitem{IBM-CV} \textit{IBM - What is computer vision} [online]. [cit. 2022-03-04]. Dostupné z \url{https://www.ibm.com/topics/computer-vision}
+    \bibitem{LowPoly} \textit{Low Poly} [online]. [cit. 2022-03-06]. Dostupné z \url{https://blog.displate.com/low-poly-art/}
+    \bibitem{BoxModeling} \textit{BoxModeling} [online]. [cit. 2022-03-06]. Dostupné z \url{https://it-s.com/what-is-box-modeling/}
 \end{thebibliography}
