--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -87,7 +87,7 @@ Chtěli bychom poděkovat našim učitelům, RNDr. Janu Koupilovi, Ph.D. za vede
 
 \noindent{\Large{\bfseries{Abstrakt}}}
 
-\noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmického a programovacích dovedností u dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilí aplikaci v roli ovladače hry a webový frontend v roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
+\noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmického a programovacích dovedností u dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilní aplikaci v roli ovladače hry a webový frontend v roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
 
 \vspace{18pt}
 
