Fixed text issues

--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -85,9 +85,9 @@ Chtěli bychom poděkovat našim učitelům, RNDr. Janu Koupilovi, Ph.D. za vede
 
 \cleardoublepage
 
-\noindent{\Large{\bfseries{Abstrakt}}}
+\noindent{\Large{\bfseries{rakt}}}
 
-\noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmického a programovacích dovedností u dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilní aplikaci v roli ovladače hry a webový frontend v roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
+\noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmických a programovacích dovedností u dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilní aplikaci v roli ovladače hry a webový frontend v roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
 
 \vspace{18pt}
 
