--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -63,7 +63,7 @@
 
 \noindent{\Large{\bfseries{Prohlášení}}}
 
-\noindent Prohlašujeme, že jsem svou práci SOČ vypracovali samostatně a použili jsem pouze prameny a literaturu uvedené v seznamu bibliografických záznamů.
+\noindent Prohlašujeme, že jsme svou práci SOČ vypracovali samostatně a použili jsme pouze prameny a literaturu uvedené v seznamu bibliografických záznamů.
 
 \noindent Prohlašujeme, že tištěná verze a elektronická verze soutěžní práce SOČ jsou shodné. 
 
@@ -81,11 +81,11 @@
 \noindent{\Large{\bfseries{Poděkování}}}
 
 \noindent
-Chtěli bychom poděkovat našim učitelům, RNDr. Janu Koupilovi, Ph.D. za vedení projektu po technické stránce a akademickému malíři Danielu Václavíkovi za vedení práce po grafické stránce. Dále bychom chtěli poděkovat všem lidem, kteří se zapojili na testování na našem projektu.
+Chtěli bychom poděkovat našim učitelům: RNDr. Janu Koupilovi, Ph.D. za vedení projektu po technické stránce a akademickému malíři Danielu Václavíkovi za vedení práce po grafické stránce. Dále bychom chtěli poděkovat všem lidem, kteří se zapojili testovací fáze našeho projektu.
 
 \cleardoublepage
 
-\noindent{\Large{\bfseries{rakt}}}
+\noindent{\Large{\bfseries{Abstrakt}}}
 
 \noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmických a programovacích dovedností u dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilní aplikaci v roli ovladače hry a webový frontend v roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
 
