--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -33,4 +33,7 @@
     \bibitem{IBM-CV} \textit{IBM - What is computer vision} [online]. [cit. 2022-03-04]. Dostupné z \url{https://www.ibm.com/topics/computer-vision}
     \bibitem{LowPoly} \textit{Low Poly} [online]. [cit. 2022-03-06]. Dostupné z \url{https://blog.displate.com/low-poly-art/}
     \bibitem{BoxModeling} \textit{BoxModeling} [online]. [cit. 2022-03-06]. Dostupné z \url{https://it-s.com/what-is-box-modeling/}
+    \bibitem{Montessori} MONTESSORI, Maria. \textit{Londýnské přednášky.}  Praha: Portál, 2019.
+    \bibitem{VyvojovaPsychologie}  PROKEŠ, Josef. \textit{Vývojová psychologie} – učební text. Studijní text. [online]. [cit. 2022-03-20]. Dostupné z \url{https://www.fi.muni.cz/~qprokes/socka/socka3.html}
+    \bibitem{ASE} HARLEN, Wynne (ed.). ASE \textit{guide to primary science education.} Hatfield: Association for Science Education, 2011.
 \end{thebibliography}
