fix nadpisů na konci stránky

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 
 \linespread{1.15} %% řádkování
 
-\usepackage[pagestyles]{titlesec} %% balíček pro úpravu stylu kapitol a sekcí
+\usepackage[pagestyles, nobottomlines]{titlesec} %% balíček pro úpravu stylu kapitol a sekcí
 \titleformat{\chapter}[block]{\scshape\bfseries\LARGE}{\thechapter}{10pt}{\vspace{0pt}}[\vspace{-22pt}]
 \titleformat{\section}[block]{\scshape\bfseries\Large}{\thesection}{10pt}{\vspace{0pt}}
 \titleformat{\subsection}[block]{\bfseries\large}{\thesubsection}{10pt}{\vspace{0pt}}
