--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -65,8 +65,6 @@
 
 \noindent Prohlašujeme, že jsme svou práci SOČ vypracovali samostatně a použili jsme pouze prameny a literaturu uvedené v seznamu bibliografických záznamů.
 
-\noindent Prohlašujeme, že tištěná verze a elektronická verze soutěžní práce SOČ jsou shodné. 
-
 \noindent Nemáme závažný důvod proti zpřístupňování této práce v souladu se zákonem č. 121/2000 Sb., o právu autorském, o právech souvisejících s právem autorským a o změně některých zákonů (autorský zákon) ve znění pozdějších předpisů. 
 
 \vspace{24 pt}
@@ -93,19 +91,19 @@ Chtěli bychom poděkovat našim učitelům: RNDr. Janu Koupilovi, Ph.D. za vede
 
 \noindent{\Large{\bfseries{Klíčová slova}}}
 
-\noindent Programování; GraphQL; TensorFlow 
+\noindent Programování; GraphQL; TensorFlow; algoritmické myšlení; 3D grafika
 
 \vspace{18pt}
 
 \noindent{\Large{\bfseries{Abstract}}}
 
-\noindent The main goal of this project is to create an educational game for primary school students, in which they learn how to logically think about code.
+\noindent This theses documents the design and development of the Codeventure game focused on the development of algorithmic and programming skills of children, aimed at younger school age. The implementation of the project includes a backend part, a mobile application in the role of a game controller and a web frontend in the role of a display. Part of the solution is the use of artificial intelligence for machine image recognition.
 
 \vspace{18pt}
 
 \noindent{\Large{\bfseries{Keywords}}}
 
-\noindent Programming; GraphQL; TensorFlow
+\noindent Programming; GraphQL; TensorFlow; alghoritmical thinking; 3D graphics
 
 \cleardoublepage
 
