--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -63,13 +63,13 @@
 
 \noindent{\Large{\bfseries{Prohlášení}}}
 
-\noindent Prohlašujeme, že jsme svou práci SOČ vypracovali samostatně a použili jsme pouze prameny a literaturu uvedené v seznamu bibliografických záznamů.
+\noindent Prohlašujeme, že jsme svou práci SOČ vypracovali samostatně a použili jsme pouze prameny a literaturu uvedené v~seznamu bibliografických záznamů.
 
-\noindent Nemáme závažný důvod proti zpřístupňování této práce v souladu se zákonem č. 121/2000 Sb., o právu autorském, o právech souvisejících s právem autorským a o změně některých zákonů (autorský zákon) ve znění pozdějších předpisů. 
+\noindent Nemáme závažný důvod proti zpřístupňování této práce v~souladu se zákonem č. 121/2000 Sb., o~právu autorském, o~právech souvisejících s~právem autorským a o~změně některých zákonů (autorský zákon) ve znění pozdějších předpisů. 
 
 \vspace{24 pt}
 
-\noindent V Pardubicích dne x. xxxx 2022 \dotfill{}\hspace{\stretch{0.5}} 
+\noindent V~Pardubicích dne x. xxxx 2022 \dotfill{}\hspace{\stretch{0.5}} 
 
 \hspace{6cm} Michal Maděra, Josef Kahoun
 
@@ -85,7 +85,7 @@ Chtěli bychom poděkovat našim učitelům: RNDr. Janu Koupilovi, Ph.D. za vede
 
 \noindent{\Large{\bfseries{Abstrakt}}}
 
-\noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmických a programovacích dovedností u dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilní aplikaci v roli ovladače hry a webový frontend v roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
+\noindent Práce SOČ dokumentuje návrh a vývoj hry Codeventure zaměřené na rozvoj algoritmických a programovacích dovedností u~dětí mladšího školního věku. Realizace projektu zahrnuje backendovou část, mobilní aplikaci v~roli ovladače hry a webový frontend v~roli displeje. Součástí řešení je využití umělé inteligence pro strojové rozpoznání obrazu.
 
 \vspace{18pt}
 
