Kartičky do závěru

--- a/main.tex
+++ b/main.tex
@@ -72,16 +72,7 @@
 %% obrázky 
 \listoffigures
 
-%% tabulky
-% \listoftables
-
-\appendix %% začínají přílohy
-
-\titleformat{\chapter}[block]{\scshape\bfseries\LARGE}{Příloha \thechapter}{10pt}{\vspace{0pt}}[\vspace{-22pt}] %% nastavení nadpisu u příloh
-
-
-\chapter{%Příloha A 
-Spot diagramy a další }
+\input{texts/appendix.tex}
 
 
 \end{document}
