--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -52,7 +52,7 @@
 }
 {\Large
     \noindent\textbf{Autoři:} Michal Maděra a Josef Kahoun\\
-    \textbf{Škola:} DELTA - Střední škola informatiky a ekonomie, s.r.o.\\
+    \textbf{Škola:} DELTA - Střední škola informatiky a ekonomie, s.r.o., Ke Kamenci 151, 530 03 Pardubice\\
     \textbf{Kraj:} Pardubický kraj\\
     \textbf{Konzultanti:} RNDr. Jan Koupil, Ph.D. a akademický malíř Daniel Václavík\\
 }
