--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -36,4 +36,14 @@
     \bibitem{Montessori} MONTESSORI, Maria. \textit{Londýnské přednášky.}  Praha: Portál, 2019.
     \bibitem{VyvojovaPsychologie}  PROKEŠ, Josef. \textit{Vývojová psychologie} – učební text. Studijní text. [online]. [cit. 2022-03-20]. Dostupné z~\url{https://www.fi.muni.cz/~qprokes/socka/socka3.html}
     \bibitem{ASE} HARLEN, Wynne (ed.). ASE \textit{guide to primary science education.} Hatfield: Association for Science Education, 2011.
+    \bibitem{ORM} \textit{What are ORMs?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.prisma.io/docs/concepts/overview/prisma-in-your-stack/is-prisma-an-orm#what-are-orms}
+    \bibitem{WebSocket} \textit{WebSockets} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API}
+    \bibitem{JavaScript} \textit{What is JavaScript?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript}
+    \bibitem{React} \textit{React.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://reactjs.org/}
+    \bibitem{Next} \textit{What is Next.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://nextjs.org/learn/foundations/about-nextjs/what-is-nextjs}
+    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
+    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
+    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
+    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
+    
 \end{thebibliography}
